crates/naos-core/tests/fixtures/conformance/rejected/broken-syntax.wc.tsx
export function BrokenSyntax( {
  return <span>Broken</span>
}
